// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeclarationStructureTreeItem should not return children on simple declarations 1`] = `Array []`;

exports[`DeclarationStructureTreeItem should return the correct accessor children 1`] = `
Array [
  DeclarationStructureTreeItem {
    "collapsibleState": 0,
    "command": Object {
      "arguments": Array [
        GetterDeclaration {
          "end": undefined,
          "isAbstract": false,
          "name": "getter",
          "start": undefined,
          "type": undefined,
          "visibility": undefined,
        },
      ],
      "command": "typescriptHero.codeOutline.gotoNode",
      "title": "Jump to node",
    },
    "context": ContextMock {
      "extensionPath": "",
      "storagePath": "",
      "subscriptions": Array [],
    },
    "declaration": GetterDeclaration {
      "end": undefined,
      "isAbstract": false,
      "name": "getter",
      "start": undefined,
      "type": undefined,
      "visibility": undefined,
    },
    "label": "get() getter",
  },
]
`;

exports[`DeclarationStructureTreeItem should return the correct icon path 1`] = `"./src/assets/icons/declarations/class.svg"`;

exports[`DeclarationStructureTreeItem should return the correct icon path for itemKind "class" 1`] = `"./src/assets/icons/declarations/class.svg"`;

exports[`DeclarationStructureTreeItem should return the correct icon path for itemKind "const" 1`] = `"./src/assets/icons/declarations/default.svg"`;

exports[`DeclarationStructureTreeItem should return the correct icon path for itemKind "default" 1`] = `"./src/assets/icons/declarations/default.svg"`;

exports[`DeclarationStructureTreeItem should return the correct icon path for itemKind "enum" 1`] = `"./src/assets/icons/declarations/enum.svg"`;

exports[`DeclarationStructureTreeItem should return the correct icon path for itemKind "function" 1`] = `"./src/assets/icons/declarations/callable.svg"`;

exports[`DeclarationStructureTreeItem should return the correct icon path for itemKind "interface" 1`] = `"./src/assets/icons/declarations/interface.svg"`;

exports[`DeclarationStructureTreeItem should return the correct icon path for itemKind "method" 1`] = `"./src/assets/icons/declarations/callable.svg"`;

exports[`DeclarationStructureTreeItem should return the correct icon path for itemKind "module" 1`] = `"./src/assets/icons/declarations/module.svg"`;

exports[`DeclarationStructureTreeItem should return the correct icon path for itemKind "property" 1`] = `"./src/assets/icons/declarations/property.svg"`;

exports[`DeclarationStructureTreeItem should return the correct icon path for itemKind "variable" 1`] = `"./src/assets/icons/declarations/variable.svg"`;

exports[`DeclarationStructureTreeItem should return the correct method children 1`] = `
Array [
  DeclarationStructureTreeItem {
    "collapsibleState": 0,
    "command": Object {
      "arguments": Array [
        MethodDeclaration {
          "end": undefined,
          "isAbstract": false,
          "name": "method",
          "parameters": Array [],
          "start": undefined,
          "type": undefined,
          "variables": Array [],
          "visibility": undefined,
        },
      ],
      "command": "typescriptHero.codeOutline.gotoNode",
      "title": "Jump to node",
    },
    "context": ContextMock {
      "extensionPath": "",
      "storagePath": "",
      "subscriptions": Array [],
    },
    "declaration": MethodDeclaration {
      "end": undefined,
      "isAbstract": false,
      "name": "method",
      "parameters": Array [],
      "start": undefined,
      "type": undefined,
      "variables": Array [],
      "visibility": undefined,
    },
    "label": "method()",
  },
]
`;

exports[`DeclarationStructureTreeItem should return the correct property children 1`] = `
Array [
  DeclarationStructureTreeItem {
    "collapsibleState": 0,
    "command": Object {
      "arguments": Array [
        PropertyDeclaration {
          "end": undefined,
          "name": "property",
          "start": undefined,
          "type": undefined,
          "visibility": undefined,
        },
      ],
      "command": "typescriptHero.codeOutline.gotoNode",
      "title": "Jump to node",
    },
    "context": ContextMock {
      "extensionPath": "",
      "storagePath": "",
      "subscriptions": Array [],
    },
    "declaration": PropertyDeclaration {
      "end": undefined,
      "name": "property",
      "start": undefined,
      "type": undefined,
      "visibility": undefined,
    },
    "label": "property",
  },
]
`;
